NEW USER BRANCH - add: user api crud
