# src/routes/user.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express'
-import { create, getById, getAll, updateById } from '../controllers/user.js'
+import { create, getById, getAll, updateById, deleteById } from '../controllers/user.js'
 import {
   validateAuthentication,
   validateTeacherRole
@@ -10,6 +10,8 @@ const router = Router()
 router.post('/', create)
 router.get('/', validateAuthentication, getAll)
 router.get('/:id', validateAuthentication, getById)
+router.put('/:id', validateAuthentication, updateById)
+router.delete('/:id', validateAuthentication, deleteById)
 router.patch('/:id', validateAuthentication, validateTeacherRole, updateById)
 
 export default router
